# radreportparser-app

./: Makefile  README.md  app.py  pyproject.toml  requirements.txt
_data-test/: ReportTable_Ex1.csv
_dev/: dev-extract.ipynb  dev-misc.ipynb  dev-test-extract.ipynb
rsconnect-python/: radreportparser-app.json
src/: __init__.py  excel_helper.py  extract_report.py
