[project]
name = "radreportparser-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12.9"
dependencies = [
    "markdownify>=1.0.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "radreportparser",
    "shiny>=1.2.1",
    "shinyswatch>=0.8.0",
]

[tool.uv.sources]
radreportparser = { git = "https://github.com/Lightbridge-KS/radreportparser.git", rev = "v0.1.1" }
